# Atlas-reporter

./: .coverage  .gitignore  .mcp.json  AGENT.md  CLAUDE.md  CLAUDE_dev.md  README.md  ROADMAP.md  SCAFFOLD_GUIDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: citation-traverse.md  cl-term-request.md  ontology-term-lookup.md  resolve-name.md  scan-supplements.md  synthesize-report.md
.githooks/: pre-commit
docs/: annotation_provenance_workflow_plan.md  cl_new_term_request_template.md  codebase_overview.md  preprint_citation_options.md  review_request_fetal_skin_atlas.md
planning/: efficient_workflow_design.md
scratch/: check_gene_ids.py
scripts/: generate_report.py  graduate-ring.py  setup_local_index.py
src/atlas_chat/: README.md  pyproject.toml
src/atlas_chat/atlas_chat/: __init__.py  cli.py
src/atlas_chat/atlas_chat/agents/: example_agent.py
src/atlas_chat/atlas_chat/graphs/: definitions.py  report_graph.py
src/atlas_chat/atlas_chat/llm/: factory.py
src/atlas_chat/atlas_chat/schemas/: all_summaries.schema.json  cell_type_annotation.schema.json  citation_traverse_input.schema.json  cl_mapping.schema.json  cl_term_request.schema.json  cl_term_request_input.schema.json  name_resolution.schema.json  ontology_lookup_input.schema.json  paper_catalogue.schema.json  resolve_name_input.schema.json  scan_supplements_input.schema.json  supplementary_findings.schema.json  synthesize_report_input.schema.json
src/atlas_chat/atlas_chat/services/: _jats_parser.py  _pdf_parser.py  citation_traverser.py  europepmc.py  fetch_preprint.py  local_snippet_index.py  subatlas_resolver.py
src/atlas_chat/atlas_chat/utils/: prompt_loader.py
src/atlas_chat/atlas_chat/validation/: report_checker.py
src/github_app_posting/: pyproject.toml
src/github_app_posting/github_app_posting/: __init__.py  auth.py  cli.py  client.py  config.py  exceptions.py
(+979 files in other folders)
