[project]
name = "atlas_chat"
version = "0.1.0"
description = "Generate cell type reports for an atlas from its source paper and citations.  Use the same sources to drive chat."
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-ai>=1.16.0",
    "jsonschema>=4.22.0",
    "pyyaml>=6.0",
    "cellsem-llm-client @ git+https://github.com/Cellular-Semantics/cellsem_llm_client.git@main",
    "deep-research-client @ git+https://github.com/monarch-initiative/deep-research-client.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
# Local snippet index for fresh preprints (not yet indexed by ASTA / EuropePMC).
# Pulls in sentence-transformers (~500 MB) — keep optional.
local-index = [
    "sentence-transformers>=5.0",
    "numpy>=1.26",
    "curl-cffi>=0.7.0",
    "pymupdf4llm>=0.0.17",
]

[project.scripts]
atlas-report = "atlas_chat.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"atlas_chat" = ["schemas/*.schema.json", "**/*.prompt.yaml"]
