[project]
name = "github_app_posting"
version = "0.1.0"
description = "Post GitHub issues via GitHub App authentication. No personal tokens needed."
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "PyJWT>=2.8",
    "cryptography>=42",
    "pydantic>=2.7",
]

[project.scripts]
gh-app-post = "github_app_posting.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
